# stagegate

./: .readthedocs.yaml  API.md  LICENSE  README.md  USE_CASES.md  pyproject.toml
docs/: API.md  Makefile  USE_CASES.md  requirements.txt
docs/source/: conf.py  index.rst  use-cases.md  users-guide.md  welcome.md
docs/source/api/: index.rst  stagegate.rst
docs/source/minigate/: cli.md  examples.md  index.md  input-formats.md  pipeline-files.md  quickstart.md  templates.md
docs/source/minigate/examples/: basic_args.pipeline  batch_inference.csv  batch_inference.pipeline  log_archive.csv  log_archive.pipeline  media_transcode.csv  media_transcode.pipeline  ml_feature_pack.pipeline  ml_feature_pack.txt  quickstart_args.pipeline  rnaseq.pipeline  varlists.pipeline  varlists.txt
src/stagegate/: __init__.py  _records.py  _states.py  _task_context.py  _wait_utils.py  exceptions.py  handles.py  pipeline.py  scheduler.py  snapshots.py  subprocesses.py  wait.py
src/stagegate/tools/: __init__.py
src/stagegate/tools/minigate/: __init__.py  ast.py  (+10 more)
tests/: test_handles.py  test_minigate_cli.py  test_minigate_eval.py  test_minigate_input_loader.py  test_minigate_preprocess_parser.py  test_minigate_runtime.py  test_minigate_template_parser.py  test_minigate_validate.py  test_namespace.py  test_pipeline_runtime.py  test_scheduler_basics.py  test_shutdown_runtime.py  test_snapshot_block_hunt.py  test_snapshots.py  test_task_runtime.py  test_task_submission.py  test_terminate_runtime.py  test_waits.py
tests/data/minigate/: README.md
tests/helpers/: subprocess_probe.py
(+28 files in other folders)
