[project]
name = "stagegate"
version = "0.1.0"
description = "A small, explicit scheduler for forward-only pipelines with stage-aware task priority."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
    { name = "ttkkmg", email = "ttkkmg@gmail.com" }
]
maintainers = [
    { name = "ttkkmg", email = "ttkkmg@gmail.com" }
]
keywords = [
    "scheduler",
    "pipeline",
    "workflow",
    "threading",
    "concurrency",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ttkkmg/stagegate"
Repository = "https://github.com/ttkkmg/stagegate"
Issues = "https://github.com/ttkkmg/stagegate/issues"
Changelog = "https://github.com/ttkkmg/stagegate/releases"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
